processed/jira/txt/LU/LU-16791.txt
Key:        LU-16791
Summary:    Modern ZFS constified nvlist* functions breaking zfs_[gs]et_prop_*
Link:       https://jira.whamcloud.com/browse/LU-16791
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Oleg Drokin
Reporter:   Oleg Drokin
Created:    Mon, 1 May 2023 23:23:35 +0000
Updated:    Thu, 15 May 2025 14:00:13 +0000
Resolved:   Thu, 18 Jan 2024 13:16:01 +0000
Labels:     lug23dd
Links:      Related: is related to LU-16795

--- Description ---
When trying to build lustre against  zfs master tree we get this:

libmount_utils_zfs.c: In function 'zfs_get_prop_int':
libmount_utils_zfs.c:491:51: error: passing argument 3 of 'nvlist_lookup_string' from incompatible pointer type [-Werror=incompatible-pointer-types]
  ret = nvlist_lookup_string(propval, ZPROP_VALUE, &propstr);
                                                   ^~~~~~~~ 

and related

--- Comment (gerrit, Mon, 18 Nov 2024 17:39:50 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/54818/

Subject: LU-16791 utils: ZFS 2.2 const prop args

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 

Commit: 0a2d92bf0b2b533c0ddce6bb33cd7f3e25020710

--- Comment (gerrit, Tue, 16 Apr 2024 22:06:19 +0000) ---
"Eric Carbonneau " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54818

Subject: LU-16791 utils: ZFS 2.2 const prop args

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: 0bb434eaa1d21a4bdd98e880f8f76eae3b38cd95

--- Comment (JIRAUSER18017, Sun, 21 Jan 2024 05:54:27 +0000) ---
There are build failures when it's built against ZFS (master and zfs-2.2-release) builds even after landing LU-16791. Further, LU-17421 is created to fix the build issue for the `arc_prune_func_t` changes.

--- Comment (JIRAUSER18017, Fri, 19 Jan 2024 04:31:57 +0000) ---
Can we check if openzfs (zfs-2.2-release and master) builds on the latest lustre-release code along with this patch, and see if there are any failures due to `arc_prune_func_t` changes?

--- Comment (pjones, Thu, 18 Jan 2024 13:16:01 +0000) ---
Landed for 2.16

--- Comment (gerrit, Thu, 18 Jan 2024 06:15:42 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/52519/

Subject: LU-16791 utils: ZFS 2.2 const prop args

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: b4b32ffd22d276bc1d8f40e3336df982f3717070

--- Comment (JIRAUSER18017, Tue, 9 Jan 2024 16:41:10 +0000) ---
On the latest lustre-release code along with this patch, the build fails due to `arc_prune_func_t` changes: 

/root/akash/akash/build/lustre-release/lustre/osd-zfs/osd_handler.c: In function 'osd_objset_register_callbacks':
/root/akash/akash/build/lustre-release/lustre/osd-zfs/osd_handler.c:915:50: error: passing argument 1 of 'arc_add_prune_callback' from incompatible pointer type [-Werror=incompatible-pointer-types]
  915 |         o->arc_prune_cb = arc_add_prune_callback(arc_prune_func, o);
      |                                                  ^~~~~~~~~~~~~~
      |                                                  |
      |                                                  void (*)(int64_t,  void *) {aka void (*)(long long int,  void *)}
In file included from /root/akash/akash/build/lustre-release/lustre/osd-zfs/osd_internal.h:51,
                 from /root/akash/akash/build/lustre-release/lustre/osd-zfs/osd_handler.c:51:
/usr/src/zfs-2.2.2/include/sys/arc.h:310:55: note: expected 'void (*)(uint64_t,  void *)' {aka 'void (*)(long long unsigned int,  void *)'} but argument is of type 'void (*)(int64_t,  void *)' {aka 'void (*)(long long int,  void *)'}
  310 | arc_prune_t *arc_add_prune_callback(arc_prune_func_t *func, void *priv);
      |                                     ~~~~~~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
make[6]: *** [scripts/Makefile.build:321: /root/akash/akash/build/lustre-release/lustre/osd-zfs/osd_handler.o] Error 1
make[6]: *** Waiting for unfinished jobs....
make[5]: *** [scripts/Makefile.build:607: /root/akash/akash/build/lustre-release/lustre/osd-zfs] Error 2
make[4]: *** [scripts/Makefile.build:607: /root/akash/akash/build/lustre-release/lustre] Error 2
make[3]: *** [Makefile:1923: /root/akash/akash/build/lustre-release] Error 2
make[3]: Leaving directory '/usr/src/kernels/5.14.0-284.18.1.x7.0.000.9.x86_64'
make[2]: *** [autoMakefile:1200: modules] Error 2
make[2]: Leaving directory '/root/akash/akash/build/lustre-release'
make[1]: *** [autoMakefile:711: all-recursive] Error 1
make[1]: Leaving directory '/root/akash/akash/build/lustre-release'
make: *** [autoMakefile:571: all] Error 2

Build failure seems to be due to the changes to `arc_prune_func_t`  from the following commit from OpenZFS:

commit 3ec4ea68d491a82c8de3360d50032bdecd53608f
Date:   Mon Oct 30 19:56:04 2023 -0400
Unify arc_prune_async() code
Closes #15456
...
- typedef void arc_prune_func_t(int64_t bytes, void *priv);
+ typedef void arc_prune_func_t(uint64_t bytes, void *priv);
...

--- Comment (gerrit, Tue, 26 Sep 2023 20:30:02 +0000) ---
"Brian Atkinson " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52519

Subject: LU-16791 utils: ZFS 2.2 const prop args

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: d01bf3997a43e13fb22067fd8ee803dc9a5a9f5c

--- Comment (gerrit, Mon, 1 May 2023 23:25:18 +0000) ---
"Oleg Drokin " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/50824

Subject: LU-16791 utils: Constify prop argument for zfs nvlist*

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: f434618dfde371b05eafeeb9ab10ab8711e0a284
